# nmpde_project_Navier_Stokes

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
mesh/: Cylinder2D.msh  Cylinder3D.geo  turek.geo  turek.msh  turek_lite.geo  turek_lite.msh  turek_super_lite.geo  turek_super_lite.msh
src/: NavierStokes.cpp  NavierStokes.hpp  NavierStokes3D.cpp  NavierStokes3D.hpp  Preconditioners.hpp  case_1.prm  case_2.prm  case_3.prm  case_3D.prm  coeff_history.py  fft.py  main.cpp  main3D.cpp  parameters.prm  radar.py
